# JavaWoolz

./: AUTHORS  Makefile.am  README  build.sh  configure.ac
uk/ac/mrc/hgu/Wlz/C/: Makefile.am
uk/ac/mrc/hgu/Wlz/C2Java/: Makefile.am
uk/ac/mrc/hgu/Wlz/C2Java/Binding/: JWlzEnumList.am  JWlzStructList.am
uk/ac/mrc/hgu/Wlz/Java/: Makefile.am
uk/ac/mrc/hgu/Wlz/Test/: Makefile.am
